--- a/client/src/CSS/scss_partials/home/_home.scss
+++ b/client/src/CSS/scss_partials/home/_home.scss
@@ -5,7 +5,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color: v.$mode-common-background-color-light;
+	background-color: v.$mode-home-background-color-light;
+	color: v.$mode-home-text-color-light;
 	height: 100%;
 	width: 100%;
 }
