--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -200,13 +200,13 @@ $raspberry-red-level-2: #d44141;
 $basic-yellow-level-1: #ffff00;
 $basic-yellow-level-2: #e2e200;
 
-// Light/Dark mode (general)
+// Light/Dark mode -- common (i.e. used by many components)
 $mode-common-background-color-light: white;
 $mode-common-background-color-dark: $gray-dark-level-8;
-$mode-common-primary-text-color-light: black;
-$mode-common-primary-text-color-dark: $tinted-gray-light-level-1;
-$mode-common-secondary-text-color-light: $gray-dark-level-10;
-$mode-common-secondary-text-color-dark: $tinted-gray-light-level-4;
+$mode-common-strong-text-color-light: black;
+$mode-common-strong-text-color-dark: $tinted-gray-light-level-1;
+$mode-common-weak-text-color-light: $gray-dark-level-10;
+$mode-common-weak-text-color-dark: $tinted-gray-light-level-4;
 $mode-backend-errors-text-color-light: $basic-red-level-1;
 $mode-backend-errors-text-color-dark: $fiery-red-level-1;
 $mode-char-count-limit-reached-text-color-light: $mode-backend-errors-text-color-light;
@@ -225,8 +225,8 @@ $mode-custom-checkbox-border-color-light: black;
 $mode-custom-checkbox-border-color-dark: $gray-level-1;
 $mode-custom-checkbox-background-color-light: $mode-common-background-color-light;
 $mode-custom-checkbox-background-color-dark: $mode-common-background-color-dark;
-$mode-custom-checkmark-text-color-light: $mode-common-primary-text-color-light;
-$mode-custom-checkmark-text-color-dark: $mode-common-primary-text-color-dark;
+$mode-custom-checkmark-text-color-light: $mode-common-strong-text-color-light;
+$mode-custom-checkmark-text-color-dark: $mode-common-strong-text-color-dark;
 $mode-toggle-switch-on-text-color-light: white;
 $mode-toggle-switch-on-text-color-dark: white;
 $mode-toggle-switch-on-circle-background-color-light: white;
@@ -244,17 +244,11 @@ $mode-common-form-input-border-color-light: $gray-level-5;
 $mode-common-form-input-border-color-dark: black;
 $mode-common-form-input-background-color-light: $gray-light-level-5;
 $mode-common-form-input-background-color-dark: $gray-dark-level-2;
-$mode-list-row-border-color-light: $gray-level-2;
-$mode-list-row-border-color-dark: $gray-level-6;
-$mode-list-row-hover-background-color-light: $gray-light-level-2;
-$mode-list-row-hover-background-color-dark: $gray-dark-level-6;
-$mode-list-row-selected-background-color-light: $gray-light-level-6;
-$mode-list-row-selected-background-color-dark: $gray-dark-level-4;
-$mode-list-header-box-shadow-light: 0 1px 0 $mode-list-row-border-color-light; // Must be bellow $mode-list-row-border-color-light
-$mode-list-header-box-shadow-dark: 0 1px 0 $mode-list-row-border-color-dark; // Must be bellow $mode-list-row-border-color-dark
-$mode-list-header-background-color-light: $mode-common-background-color-light;
-$mode-list-header-background-color-dark: $mode-common-background-color-dark;
-// Light/Dark mode (specific)
+// Light/Dark mode -- specific (i.e. used by specific component(s))
+$mode-home-background-color-light: $mode-common-background-color-light;
+$mode-home-background-color-dark: $mode-common-background-color-dark;
+$mode-home-text-color-light: $mode-common-strong-text-color-light;
+$mode-home-text-color-dark: $mode-common-strong-text-color-dark;
 $mode-navbar-hamburger-dropdown-background-color-light: $mode-common-background-color-light;
 $mode-navbar-hamburger-dropdown-background-color-dark: $mode-common-background-color-dark;
 $mode-navbar-hamburger-dropdown-option-border-color-light: $gray-level-1;
@@ -289,24 +283,36 @@ $mode-top-bar-border-color-light: black;
 $mode-top-bar-border-color-dark: black;
 $mode-top-bar-background-color-light: $gray-light-level-5;
 $mode-top-bar-background-color-dark: $gray-dark-level-12;
-$mode-top-bar-button-border-color-light: $mode-common-primary-text-color-light;
+$mode-top-bar-button-border-color-light: $mode-common-strong-text-color-light;
 $mode-top-bar-button-border-color-dark: $gray-level-1;
 $mode-top-bar-button-background-color-light: $mode-common-background-color-light;
 $mode-top-bar-button-background-color-dark: $gray-dark-level-5;
-$mode-top-bar-button-text-color-light: $mode-common-primary-text-color-light;
-$mode-top-bar-button-text-color-dark: $mode-common-primary-text-color-dark;
-$mode-top-bar-new-item-tutorial-arrow-background-color-light: $mode-common-primary-text-color-light;
-$mode-top-bar-new-item-tutorial-arrow-background-color-dark: $mode-common-primary-text-color-dark;
+$mode-top-bar-button-text-color-light: $mode-common-strong-text-color-light;
+$mode-top-bar-button-text-color-dark: $mode-common-strong-text-color-dark;
+$mode-top-bar-new-item-tutorial-arrow-background-color-light: $mode-common-strong-text-color-light;
+$mode-top-bar-new-item-tutorial-arrow-background-color-dark: $mode-common-strong-text-color-dark;
+$mode-top-bar-search-bar-background-color-light: $mode-common-background-color-light;
+$mode-top-bar-search-bar-background-color-dark: $gray-dark-level-6;
+$mode-top-bar-search-bar-text-color-light: $mode-common-strong-text-color-light;
+$mode-top-bar-search-bar-text-color-dark: $mode-common-strong-text-color-dark;
 $mode-create-item-sidebar-background-color-light: $mode-common-background-color-light;
 $mode-create-item-sidebar-background-color-dark: $mode-common-background-color-dark;
 $mode-create-item-sidebar-form-disabled-background-color-light: $mode-create-item-sidebar-background-color-light;
 $mode-create-item-sidebar-form-disabled-background-color-dark: $mode-create-item-sidebar-background-color-dark;
 $mode-create-item-sidebar-form-disabled-text-color-light: $gray-light-level-10;
 $mode-create-item-sidebar-form-disabled-text-color-dark: $gray-level-6;
-$mode-top-bar-search-bar-background-color-light: $mode-common-background-color-light;
-$mode-top-bar-search-bar-background-color-dark: $gray-dark-level-6;
-$mode-top-bar-search-bar-text-color-light: $mode-common-primary-text-color-light;
-$mode-top-bar-search-bar-text-color-dark: $mode-common-primary-text-color-dark;
+$mode-list-view-table-row-border-color-light: $gray-level-2;
+$mode-list-view-table-row-border-color-dark: $gray-level-6;
+$mode-list-view-table-row-background-color-light: $mode-common-background-color-light;
+$mode-list-view-table-row-background-color-dark: $mode-common-background-color-dark;
+$mode-list-view-table-row-hover-background-color-light: $gray-light-level-2;
+$mode-list-view-table-row-hover-background-color-dark: $gray-dark-level-6;
+$mode-list-view-table-row-selected-background-color-light: $gray-light-level-6;
+$mode-list-view-table-row-selected-background-color-dark: $gray-dark-level-4;
+$mode-list-view-table-row-header-box-shadow-light: 0 1px 0 $mode-list-view-table-row-border-color-light;
+$mode-list-view-table-row-header-box-shadow-dark: 0 1px 0 $mode-list-view-table-row-border-color-dark;
+$mode-list-view-table-row-header-background-color-light: $mode-common-background-color-light;
+$mode-list-view-table-row-header-background-color-dark: $mode-common-background-color-dark;
 $mode-delete-modal-background-color-light: $mode-common-background-color-light;
 $mode-delete-modal-background-color-dark: $mode-common-background-color-dark;
 $mode-delete-modal-delete-button-background-color-light: $mode-account-modal-delete-account-form-delete-button-background-color-light;
@@ -329,16 +335,30 @@ $mode-item-view-top-bar-icon-button-hover-text-color-light: $gray-dark-level-7;
 $mode-item-view-top-bar-icon-button-hover-text-color-dark: $gray-level-1;
 $mode-item-view-top-bar-options-dropdown-row-hover-background-color-light: $gray-light-level-4;
 $mode-item-view-top-bar-options-dropdown-row-hover-background-color-dark: $gray-dark-level-4;
-$mode-item-view-item-box-background-color-light: $mode-top-bar-background-color-light;
-$mode-item-view-item-box-background-color-dark: $mode-top-bar-background-color-dark;
 $mode-item-view-list-sidebar-border-color-light: $mode-top-bar-border-color-light;
 $mode-item-view-list-sidebar-border-color-dark: $mode-top-bar-border-color-dark;
 $mode-item-view-list-sidebar-expand-minimize-button-border-color-light: $mode-item-view-list-sidebar-border-color-light;
 $mode-item-view-list-sidebar-expand-minimize-button-border-color-dark: $mode-item-view-list-sidebar-border-color-dark;
-$mode-item-view-list-sidebar-expand-minimize-button-background-color-light: $mode-item-view-item-box-background-color-light;
-$mode-item-view-list-sidebar-expand-minimize-button-background-color-dark: $mode-item-view-item-box-background-color-dark;
+$mode-item-view-list-sidebar-expand-minimize-button-background-color-light: $mode-top-bar-background-color-light;
+$mode-item-view-list-sidebar-expand-minimize-button-background-color-dark: $mode-top-bar-background-color-dark;
 $mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-light: $gray-light-level-8;
 $mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-dark: $gray-dark-level-12;
+$mode-item-view-list-sidebar-table-row-border-color-light: $mode-list-view-table-row-border-color-light;
+$mode-item-view-list-sidebar-table-row-border-color-dark: $mode-list-view-table-row-border-color-dark;
+$mode-item-view-list-sidebar-table-row-background-color-light: $mode-list-view-table-row-background-color-light;
+$mode-item-view-list-sidebar-table-row-background-color-dark: $mode-list-view-table-row-background-color-dark;
+$mode-item-view-list-sidebar-table-row-hover-background-color-light: $mode-list-view-table-row-hover-background-color-light;
+$mode-item-view-list-sidebar-table-row-hover-background-color-dark: $mode-list-view-table-row-hover-background-color-dark;
+$mode-item-view-list-sidebar-table-row-selected-background-color-light: $mode-list-view-table-row-selected-background-color-light;
+$mode-item-view-list-sidebar-table-row-selected-background-color-dark: $mode-list-view-table-row-selected-background-color-dark;
+$mode-item-view-list-sidebar-table-row-header-box-shadow-light: $mode-list-view-table-row-header-box-shadow-light;
+$mode-item-view-list-sidebar-table-row-header-box-shadow-dark: $mode-list-view-table-row-header-box-shadow-dark;
+$mode-item-view-list-sidebar-table-row-header-background-color-light: $mode-list-view-table-row-header-background-color-light;
+$mode-item-view-list-sidebar-table-row-header-background-color-dark: $mode-list-view-table-row-header-background-color-dark;
+$mode-item-view-content-container-background-color-light: $mode-common-background-color-light;
+$mode-item-view-content-container-background-color-dark: $mode-common-background-color-dark;
+$mode-item-view-item-box-background-color-light: $mode-top-bar-background-color-light;
+$mode-item-view-item-box-background-color-dark: $mode-top-bar-background-color-dark;
 $mode-item-view-form-input-border-color-light: black;
 $mode-item-view-form-input-border-color-dark: black;
 $mode-item-view-form-input-background-color-light: $mode-common-background-color-light;
@@ -353,8 +373,8 @@ $mode-item-view-form-cancel-button-hover-background-color-light: $gray-light-lev
 $mode-item-view-form-cancel-button-hover-background-color-dark: $gray-dark-level-3;
 $mode-item-view-comment-box-individual-comment-icon-button-text-color-light: $gray-level-6;
 $mode-item-view-comment-box-individual-comment-icon-button-text-color-dark: $gray-level-4;
-$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-light: $mode-common-primary-text-color-light;
-$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-dark: $mode-common-primary-text-color-dark;
+$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-light: $mode-common-strong-text-color-light;
+$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-dark: $mode-common-strong-text-color-dark;
 
 // Themes
 $theme-brighter-border-background-color-blue-turkish: $turkish-blue-level-3;
