--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -27,14 +27,15 @@
 	.js-get-list-table__row {
 		@include m.stop-text-selection();
 		
-		border-bottom: 1px solid v.$mode-list-row-border-color-light;
+		border-bottom: 1px solid v.$mode-list-view-table-row-border-color-light;
+		background-color: v.$mode-list-view-table-row-background-color-light;
 		padding: v.$list-row-padding;
 		height: v.$list-row-height;
 		text-align: center;
 	}
 
-	.list-table__row--non-header {
-		color: v.$mode-common-secondary-text-color-light;
+	.list-table__row--item-row {
+		color: v.$mode-common-weak-text-color-light;
 	}
 
 	.list-table__row--empty {
@@ -42,7 +43,7 @@
 			(v.$list-row-height * 0.5);
 	}
 
-	.list-table__header {
+	.list-table__row__header {
 		// Must be more than table__data rows below do not overlap when scrolling
 		z-index: 1;
 		position: -webkit-sticky;
@@ -50,22 +51,22 @@
 		top: 0px;
 		// Used box shadow since the header row being sticky with
 		// ...background-color applied keeps the bottom-border from appearing
-		box-shadow: v.$mode-list-header-box-shadow-light;
-		background-color: v.$mode-common-background-color-light;
+		box-shadow: v.$mode-list-view-table-row-header-box-shadow-light;
+		background-color: v.$mode-list-view-table-row-header-background-color-light;
 		width: 300px;
 	}
 
-	.list-table__header--for-mass-delete {
+	.list-table__row__header--for-mass-delete {
 		width: 80px;
 		min-width: 80px;
 	}
 
-	.list-table__header__mass-delete-options-container {
+	.list-table__row__header__mass-delete-options-container {
 		@include m.dead-center();
 		width: 100%;
 	}
 
-	.list-table__header__mass-delete-options-container__button {
+	.list-table__row__header__mass-delete-options-container__button {
 		display: inline-block;
 		margin: 4px;
 		padding: 2px;
@@ -73,24 +74,24 @@
 		cursor: pointer;
 	}
 
-	.list-table__header__mass-delete-options-container__button--disabled {
+	.list-table__row__header__mass-delete-options-container__button--disabled {
 		opacity: 0.2;
 		cursor: default;
 		pointer-events: none;
 	}
 
-	.list-table__header__sort-arrow-container {
+	.list-table__row__header__sort-arrow-container {
 		display: inline-block;
 		margin-left: 5px;
 	}
 
-	.list-table__data {
+	.list-table__row__data {
 		position: relative;
 		padding: 0px 7px 0px 7px;
 		cursor: default;
 	}
 
-	.list-table__data--name-overflow {
+	.list-table__row__data--name-overflow {
 		max-width: v.$list-table-item-name-width;
 		color: v.$default-theme-mode-text-color;
 		white-space: nowrap;
@@ -98,29 +99,29 @@
 		text-overflow: ellipsis;
 	}
 
-	.list-table__data--completed-color {
+	.list-table__row__data--completed-color {
 		color: v.$status-green;
 	}
 
-	.list-table__data__info__completed-icon {
+	.list-table__row__data__info__completed-icon {
 		margin-right: 5px;
 		color: v.$status-green;
 	}
 
-	.list-table__data__custom-checkbox-centered-container {
+	.list-table__row__data__custom-checkbox-centered-container {
 		@include m.dead-center();
 	
 		height: v.$basic-custom-checkbox-height;
 		width: v.$basic-custom-checkbox-height;
 	}
 
-	.list-table__data__centering-container {
+	.list-table__row__data__centering-container {
 		position: relative;
 		height: 100%;
 		width: 100%;
 	}
 
-	.list-table__data__centering-container__status-box {
+	.list-table__row__data__centering-container__status-box {
 		@include m.dead-center();
 
 		border-radius: v.$status-box-border-radius;
@@ -131,7 +132,7 @@
 		width: v.$status-box-width;
 	}
 
-	.list-table__data__centering-container__status-box__centered-info {
+	.list-table__row__data__centering-container__status-box__centered-info {
 		@include m.dead-center();
 
 		color: white;
